# net-auto-perspective

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: docs.yml
docs/: index.md
docs/platform/: overview.md
docs/strategies/: overview.md  platform_centralized.md  platform_decentralized.md  platform_hybrid.md
platform/overview/: index.html
search/: search_index.json
strategies/overview/: index.html
strategies/platform_centralized/: index.html
strategies/platform_decentralized/: index.html
strategies/platform_hybrid/: index.html
