[tool.poetry]
name = "net-auto-stacks"
version = "0.1.0"
description = "A guide to understanding the components of a Network Automation Platform."
authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mkdocstrings = "^0.25.1"
pymdown-extensions = "^10.8.1"
mkdocs-awesome-pages-plugin = "^2.9.2"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
